@@ -861,9 +861,8 @@ Fatal - Replace functions with equivalents which succeed or die
 =head1 BEST PRACTICE
 
 B<Fatal has been obsoleted by the new L<autodie> pragma.> Please use
-L<autodie> for deployment on systems with Perl 5.10 or newer.  It supports
-lexical scoping, throws real exception objects, and provides much nicer
-error messages.
+L<autodie> in preference to C<Fatal>.  L<autodie> supports lexical scoping,
+throws real exception objects, and provides much nicer error messages.
 
 The use of C<:void> with Fatal is discouraged.
 
@@ -890,8 +889,8 @@ values are ignored.  For example
     use Fatal qw/:void open close/;
 
     # properly checked, so no exception raised on error
-    unless(open(FH, "< /bogotic") {
-        warn "bogo file, dude: $!";
+    if (not open(my $fh, '<' '/bogotic') {
+        warn "Can't open /bogotic: $!";
     }
 
     # not checked, so error raises an exception
@@ -899,7 +898,7 @@ values are ignored.  For example
 
 The use of C<:void> is discouraged, as it can result in exceptions
 not being thrown if you I<accidentally> call a method without
-void context.  Use L<autodie> instead if you want to be able to
+void context.  Use L<autodie> instead if you need to be able to
 disable autodying/Fatal behaviour for a small block of code.
 
 =head1 DIAGNOSTICS
@@ -934,31 +933,6 @@ See the L</"SEE ALSO"> section of this documentation.
 
 You've found a bug in C<Fatal>.  Please report it using
 the C<perlbug> command.
-
-=item Cannot use lexical Fatal with no arguments
-
-You've tried to use C<use Fatal qw(:lexical)> but without supplying
-a list of which subroutines should adopt the do-or-die behaviour.
-
-=item :void cannot be used with lexical scope
-
-The C<:void> and C<:lexical> options are mutually exclusive.  You
-can't use them both in the same call to C<use Fatal>.
-
-=item :lexical must be used as first argument
-
-If you're going to use the C<:lexical> switch, it must be the first
-option passed to C<Fatal>.  If you want to modify some subroutines
-on a lexical basis, and others on a package-wide basis, simply
-make two calls to C<use Fatal>.
-
-=item no Fatal can only start with :lexical
-
-C<no Fatal> only makes sense when disabling C<Fatal> behaviour
-with lexical scope.  If you're going to use it, the first argument
-must always be C<:lexical>.  Eg: C<no Fatal qw(:lexical open)>
-
-=back
 
 =head1 GOTCHAS
 
