@@ -3,6 +3,10 @@ Revision history for Fatal
 1.10_07
 	* RELEASE CODENAME: "ikegami"
 
+	* Removed inappropriate diagnostics about :lexical from Fatal.pm
+
+	* Moved can't mix lexical and void diagnostics to autodie.pm
+
 1.10_06 Sun Jun 22 21:50:39 AUSEST 2008
 
 	* RELEASE CODENAME: "Chocolateboy", in thanks for his wonderful
